# girella

./: .gitmodules  HLint.hs  LICENSE  README.md  girella.cabal  setup-example-db.sh  silk-db-opaleye.cabal  stack.yaml
example/: Article.hs  Example.hs  Joins.hs  Main.hs  User.hs
example/Article/: Columns.hs
example/User/: Columns.hs
src/: Girella.hs
src/Girella/: Aggregation.hs  Combinators.hs  Compat.hs  Config.hs  Conv.hs  Json.hs  Misc.hs  Operators.hs  Order.hs  Query.hs  Range.hs  Run.hs  ShowConstant.hs  TH.hs  Table.hs  To.hs  Transaction.hs
src/Girella/TH/: Column.hs  Table.hs  Util.hs
src/Girella/Transaction/: Q.hs
src/Silk/: Opaleye.hs
src/Silk/Opaleye/: Aggregation.hs  Combinators.hs  Compat.hs  Config.hs  Conv.hs  Instances.hs  Json.hs  Misc.hs  Operators.hs  Order.hs  Query.hs  Range.hs  Run.hs  ShowConstant.hs  TH.hs  Table.hs  To.hs  Transaction.hs  TypeFams.hs
src/Silk/Opaleye/TH/: Column.hs  Table.hs  Util.hs
src/Silk/Opaleye/Transaction/: Q.hs
test/: Test.hs
