name:                girella
version:             1.0.0.0
license:             BSD3
synopsis:            Functional-relational mapping framework over Opaleye
description:         Functional-relational mapping framework over Opaleye
author:              Silk B.V., Adam Bergmark
maintainer:          adam@bergmark.nl
copyright:           2014-2016 Silk B.V., 2017 Adam Bergmark
category:            Database
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/bergmark/girella.git

executable example
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    example
  main-is:           Main.hs
  other-modules:
    User
    User.Columns
  build-depends:
      base >= 4.6
    , base-compat
    , hslogger
    , mtl
    , mtl-compat
    , girella
    , text == 1.2.*
    , transformers
    , transformers-compat
    , uuid

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Girella
    Girella.Aggregation
    Girella.Combinators
    Girella.Compat
    Girella.Config
    Girella.Conv
    Girella.Json
    Girella.Misc
    Girella.Operators
    Girella.Order
    Girella.Query
    Girella.Range
    Girella.Run
    Girella.ShowConstant
    Girella.TH
    Girella.TH.Column
    Girella.TH.Table
    Girella.Table
    Girella.To
    Girella.Transaction
  other-modules:
    Girella.Transaction.Q
    Girella.TH.Util
  build-depends:
      base >= 4.6 && < 4.10
    , aeson-utils >= 0.2 && < 0.4
    , base-compat >= 0.8.2 && < 0.10
    , case-insensitive == 1.2.*
    , contravariant >= 1.2 && < 1.5
    , hslogger >= 1.1 && < 1.3
    , mtl >= 2.0 && < 2.3
    , mtl-compat >= 0.1 && < 0.3
    , opaleye >= 0.5 && < 0.6
    , postgresql-simple >= 0.4.8 && < 0.6
    , product-profunctors >= 0.5 && < 0.9
    , profunctors >= 4.2 && < 5.3
    , resource-pool == 0.2.*
    , safe == 0.3.*
    , string-conversions > 0.3 && < 0.5
    , template-haskell >= 2.9 && < 2.12
    , time >= 1.4 && < 1.7
    , transformers >= 0.3 && < 0.6
    , transformers-compat >= 0.3 && < 0.6
    , uniplate == 1.6.*
    , uuid == 1.3.*
