name:                silk-db-opaleye
version:             0.2.0.8
license:             OtherLicense
synopsis:            Wrapper over Opaleye
description:         Wrapper over Opaleye
author:              Silk B.V.
maintainer:          code@silk.co
copyright:           2014 Silk B.V.
category:            Silk
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Silk.Opaleye
    Silk.Opaleye.Json
    Silk.Opaleye.Range
    Silk.Opaleye.Run
    Silk.Opaleye.TH
    Silk.Opaleye.ShowConstant
    Silk.Opaleye.TH.Column
    Silk.Opaleye.TH.Table
    Silk.Opaleye.TH.Util
    Silk.Opaleye.Transaction
    Silk.Opaleye.TypeFams
  other-modules:
  build-depends:
      base >= 4.6 && < 4.9
    , aeson-utils >= 0.2 && < 0.4
    , bytestring == 0.10.*
    , case-insensitive == 1.2.*
    , contravariant >= 1.2 && < 1.4
    , hslogger >= 1.1 && < 1.3
    , mtl >= 2.0 && < 2.3
    , mtl-compat >= 0.1 && < 0.3
    , opaleye >= 0.3.1 && < 0.4
    , postgresql-simple >= 0.4.8 && < 0.5
    , product-profunctors >= 0.5 && < 0.7
    , profunctors >= 4.2 && < 5.2
    , resource-pool == 0.2.*
    , safe == 0.3.*
    , string-conversions > 0.3 && < 0.5
    , template-haskell >= 2.9 && < 2.11
    , text >= 0.11 && < 1.3
    , time >= 1.4 && < 1.6
    , transformers >= 0.3 && < 0.5
    , transformers-compat >= 0.3 && < 0.5
    , uniplate == 1.6.*
    , uuid == 1.3.*
