name:                silk-db-opaleye
version:             0.3.0.2
license:             OtherLicense
synopsis:            Wrapper over Opaleye
description:         Wrapper over Opaleye
author:              Silk B.V.
maintainer:          code@silk.co
copyright:           2014 Silk B.V.
category:            Silk
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Silk.Opaleye
    Silk.Opaleye.Aggregation
    Silk.Opaleye.Combinators
    Silk.Opaleye.Compat
    Silk.Opaleye.Config
    Silk.Opaleye.Conv
    Silk.Opaleye.Json
    Silk.Opaleye.Misc
    Silk.Opaleye.Operators
    Silk.Opaleye.Order
    Silk.Opaleye.Query
    Silk.Opaleye.Range
    Silk.Opaleye.Run
    Silk.Opaleye.ShowConstant
    Silk.Opaleye.TH
    Silk.Opaleye.TH.Column
    Silk.Opaleye.TH.Table
    Silk.Opaleye.Table
    Silk.Opaleye.To
    Silk.Opaleye.Transaction
  other-modules:
    Silk.Opaleye.Transaction.Q
    Silk.Opaleye.TH.Util
  build-depends:
      base >= 4.6 && < 4.9
    , aeson-utils >= 0.2 && < 0.4
    , base-compat >= 0.8.2 && < 0.9
    , case-insensitive == 1.2.*
    , contravariant >= 1.2 && < 1.4
    , hslogger >= 1.1 && < 1.3
    , mtl >= 2.0 && < 2.3
    , mtl-compat >= 0.1 && < 0.3
    , opaleye >= 0.3.1 && < 0.5
    , postgresql-simple >= 0.4.8 && < 0.5
    , product-profunctors >= 0.5 && < 0.7
    , profunctors >= 4.2 && < 5.2
    , resource-pool == 0.2.*
    , safe == 0.3.*
    , string-conversions > 0.3 && < 0.5
    , template-haskell >= 2.9 && < 2.11
    , time >= 1.4 && < 1.6
    , transformers >= 0.3 && < 0.5
    , transformers-compat >= 0.3 && < 0.5
    , uniplate == 1.6.*
    , uuid == 1.3.*
